# rs-rpc

./: CHANGELOG.md  Cargo.toml  README.md
examples/: 5_seconds.rs  blocking.rs  blocking_shutdown.rs  discord_presence.rs  discord_presence_subscriber.rs  event_data.rs  large_response.rs  unblocking.rs
examples/helpers/: logging.rs
src/: client.rs  error.rs  event_handler.rs  lib.rs  macros.rs
src/connection/: base.rs  manager.rs  unix.rs  windows.rs
src/models/: message.rs  mod.rs  rich_presence.rs
tests/fixtures/: activity_full.json
