[package]
authors = ["Juliette Cordor", "Patrick Auernig <dev.patrick.auernig@gmail.com>"]
description = "A Rust client for Discord RPC."
edition = "2021"
keywords = ["discord", "ipc", "rpc"]
license = "MIT"
name = "discord-presence"
readme = "README.md"
repository = "https://github.com/jewlexx/discord-presence.git"
rust-version = "1.69.0"
version = "1.4.0"

[features]
activity_type = ["dep:serde_repr"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
byteorder = "1.5"
bytes = "1.6"
cfg-if = "1.0"
crossbeam-channel = "0.5"
num-derive = "0.4"
num-traits = "0.2"
parking_lot = "0.12"
paste = "1.0"
quork = { version = "=0.7.2", default-features = false, features = [
    "macros",
    "std",
    "traits",
] }
serde_json = "1.0"
serde_repr = { version = "0.1", optional = true }
thiserror = "2.0"
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
named_pipe = "0.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.uuid]
features = ["v4"]
version = "1.8"

[dev-dependencies]
anyhow = "1.0"
ctrlc = "3.4"
tracing-subscriber = "0.3"
version-sync = "0.9"
